force-app/main/default/objects/Task_Framework__mdt/Task_Framework__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to create records and fetch in &quot;Create Task FrameWork Process&quot; to further address Task Related stories</description>
    <label>Task Framework</label>
    <pluralLabel>Task Frameworks</pluralLabel>
</CustomObject>