force-app/main/default/objects/Task_Framework__mdt/fields/Auto_Approval_OSA_Prod_Delay__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval_OSA_Prod_Delay__c</fullName>
    <label>Auto Approval OSA Prod Delay</label>
    <precision>16</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>