force-app/main/default/objects/Task_Framework__mdt/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Used to provide description for reference</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>