force-app/main/default/objects/Task_Framework__mdt/fields/Due_Date_Time_Delay__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Time_Delay__c</fullName>
    <description>SDT - 4418  This field is to add the delayed time for due date time in task</description>
    <label>Due Date Time Delay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>