force-app/main/default/objects/Task_Framework__mdt/fields/Outcome_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Parameter__c</fullName>
    <description>Outcome parameter for the validate email comments</description>
    <label>Outcome Parameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>