force-app/main/default/objects/Task_Framework__mdt/fields/Production_Delay_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Production_Delay_Parameter__c</fullName>
    <description>Field to Store Production Delay</description>
    <label>Production Delay Parameter</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>