force-app/main/default/objects/Task_Framework__mdt/fields/Task_Related_Description__c.field-meta.xml
<CustomField>
    <fullName>Task_Related_Description__c</fullName>
    <label>Task Related Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>