force-app/main/default/objects/Task_Framework__mdt/listViews/Task_Frame_Work.listView-meta.xml
<ListView>
    <fullName>Task_Frame_Work</fullName>
    <columns>DeveloperName</columns>
    <columns>Next_Action__c</columns>
    <columns>No_of_Attempt__c</columns>
    <columns>Outcome__c</columns>
    <columns>Parameter__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Sequence__c</columns>
    <columns>Source__c</columns>
    <columns>Due_Date_Time_Delay__c</columns>
    <filterScope>Everything</filterScope>
    <label>Task Frame Work</label>
</ListView>